--- a/Logat/Logat.csproj
+++ b/Logat/Logat.csproj
@@ -8,4 +8,8 @@
     <Company>TelkomDev</Company>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
